--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
