--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@gsap/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.479.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
