--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.7",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
