--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@heroui/theme": "^2.4.12",
     "@mui/material": "^6.4.7",
     "@radix-ui/react-switch": "^1.1.3",
+    "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
     "autoprefixer": "^10.4.20",
